added initial config store for config changes

--- a/Infrastructure/Infrastructure.csproj
+++ b/Infrastructure/Infrastructure.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Configuration\ConfigStore.cs" />
     <Compile Include="Configuration\IModWithOptionsPanel.cs" />
     <Compile Include="IO\CitiesSkylinesPaths.cs" />
     <Compile Include="IO\ModFolder.cs" />
