--- a/Infrastructure/packages.config
+++ b/Infrastructure/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="ColossalManaged" version="1.4.1" targetFramework="net35" />
   <package id="ICities" version="1.4.1" targetFramework="net35" />
-  <package id="JetBrains.Annotations" version="10.1.5" targetFramework="net35" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net35" />
+  <package id="UnityEngine" version="1.4.1" targetFramework="net35" />
 </packages>
