--- a/Infrastructure/Infrastructure.csproj
+++ b/Infrastructure/Infrastructure.csproj
@@ -60,7 +60,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Configuration\ConfigStore.cs" />
-    <Compile Include="Configuration\IConfigStore.cs" />
+    <Compile Include="Configuration\IConfigStore.cs">
+      <DependentUpon>ConfigStore.cs</DependentUpon>
+    </Compile>
     <Compile Include="Configuration\IModWithOptionsPanel.cs" />
     <Compile Include="Configuration\ModConfiguration.cs" />
     <Compile Include="IO\GamePaths.cs" />
