--- a/Infrastructure/Infrastructure.csproj
+++ b/Infrastructure/Infrastructure.csproj
@@ -31,16 +31,20 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Assembly-CSharp, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Assembly-CSharp.1.4.1\lib\Assembly-CSharp.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="ColossalManaged, Version=0.3.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\ColossalManaged.1.4.1\lib\ColossalManaged.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="ICities, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\ICities.1.4.1\lib\ICities.dll</HintPath>
-      <Private>True</Private>
+      <Private>False</Private>
     </Reference>
-    <Reference Include="JetBrains.Annotations, Version=10.1.5.0, Culture=neutral, PublicKeyToken=1010a0d8d6380325, processorArchitecture=MSIL">
-      <HintPath>..\packages\JetBrains.Annotations.10.1.5\lib\net\JetBrains.Annotations.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net35\Newtonsoft.Json.dll</HintPath>
+    <Reference Include="SexyFishHorse.CitiesSkylines.Logger, Version=1.0.6000.33657, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\SexyFishHorse.CitiesSkylines.Logger.1.0.6000.33657\lib\net35-Unity Full v3.5\SexyFishHorse.CitiesSkylines.Logger.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -49,10 +53,16 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="UnityEngine, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\UnityEngine.1.4.1\lib\UnityEngine.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Configuration\ConfigStore.cs" />
-    <Compile Include="Configuration\IConfigStore.cs" />
+    <Compile Include="Configuration\IConfigStore.cs">
+      <DependentUpon>ConfigStore.cs</DependentUpon>
+    </Compile>
     <Compile Include="Configuration\IModWithOptionsPanel.cs" />
     <Compile Include="Configuration\ModConfiguration.cs" />
     <Compile Include="IO\GamePaths.cs" />
@@ -60,6 +70,14 @@
     <Compile Include="IO\FolderPathAttribute.cs" />
     <Compile Include="IUserModWithOptions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UI\IStronglyTypedUiHelper.cs" />
+    <Compile Include="UI\StronglyTypedUiHelper.cs" />
+    <Compile Include="UI\UiHelperBaseExtensions.cs" />
+    <Compile Include="Validation\Arguments\FloatExtensions.cs" />
+    <Compile Include="Validation\Arguments\ICollectionExtensions.cs" />
+    <Compile Include="Validation\Arguments\IntExtensions.cs" />
+    <Compile Include="Validation\Arguments\ObjectExtensions.cs" />
+    <Compile Include="Validation\Arguments\StringExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
