--- a/Birdcage/Birdcage.csproj
+++ b/Birdcage/Birdcage.csproj
@@ -60,7 +60,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BirdcageUserMod.cs" />
+    <Compile Include="FilterService.cs" />
+    <Compile Include="InputService.cs" />
+    <Compile Include="PositionService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SettingKeys.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Infrastructure\Infrastructure.csproj">
