--- a/Birdcage/packages.config
+++ b/Birdcage/packages.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Assembly-CSharp" version="1.4.1" targetFramework="net35-unity full v3.5" />
+  <package id="Assembly-CSharp" version="1.6.0.4" targetFramework="net35" />
   <package id="ColossalManaged" version="1.6.0.4" targetFramework="net45" />
   <package id="ICities" version="1.6.0.4" targetFramework="net45" />
-  <package id="SexyFishHorse.CitiesSkylines.Infrastructure" version="1.0.6179.36595" targetFramework="net35" />
-  <package id="SexyFishHorse.CitiesSkylines.Logger" version="1.0.6179.35827" targetFramework="net35" />
+  <package id="SexyFishHorse.CitiesSkylines.Infrastructure" version="1.0.6179.42129" targetFramework="net35" />
+  <package id="SexyFishHorse.CitiesSkylines.Logger" version="1.0.6179.42032" targetFramework="net35" />
   <package id="UnityEngine" version="1.6.0.4" targetFramework="net45" />
 </packages>
