--- a/Birdcage/Birdcage.csproj
+++ b/Birdcage/Birdcage.csproj
@@ -68,6 +68,8 @@
     <Compile Include="ChirperUtils.cs" />
     <Compile Include="FilterService.cs" />
     <Compile Include="InputService.cs" />
+    <Compile Include="ModConfig.cs" />
+    <Compile Include="OptionsPanelManager.cs" />
     <Compile Include="PositionService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SettingKeys.cs" />
