--- a/Birdcage/Birdcage.csproj
+++ b/Birdcage/Birdcage.csproj
@@ -30,23 +30,20 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <LangVersion>4</LangVersion>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Assembly-CSharp, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Assembly-CSharp.1.6.1.2\lib\Assembly-CSharp.dll</HintPath>
-      <Private>True</Private>
+      <HintPath>..\packages\Assembly-CSharp.1.9.0.5\lib\net35\Assembly-CSharp.dll</HintPath>
     </Reference>
     <Reference Include="ColossalManaged, Version=0.3.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\ColossalManaged.1.6.1.2\lib\ColossalManaged.dll</HintPath>
-      <Private>True</Private>
+      <HintPath>..\packages\ColossalManaged.1.9.0.5\lib\net35\ColossalManaged.dll</HintPath>
     </Reference>
     <Reference Include="ICities, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\ICities.1.6.1.2\lib\ICities.dll</HintPath>
-      <Private>True</Private>
+      <HintPath>..\packages\ICities.1.9.0.5\lib\net35\ICities.dll</HintPath>
     </Reference>
-    <Reference Include="SexyFishHorse.CitiesSkylines.Infrastructure, Version=1.0.6198.39519, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\SexyFishHorse.CitiesSkylines.Infrastructure.1.0.6198.39519\lib\net35\SexyFishHorse.CitiesSkylines.Infrastructure.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="SexyFishHorse.CitiesSkylines.Infrastructure, Version=1.0.6203.30709, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\SexyFishHorse.CitiesSkylines.Infrastructure.1.0.6203.30709\lib\net35\SexyFishHorse.CitiesSkylines.Infrastructure.dll</HintPath>
     </Reference>
     <Reference Include="SexyFishHorse.CitiesSkylines.Logger, Version=1.0.6198.39436, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\SexyFishHorse.CitiesSkylines.Logger.1.0.6198.39436\lib\net35\SexyFishHorse.CitiesSkylines.Logger.dll</HintPath>
@@ -59,8 +56,7 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
     <Reference Include="UnityEngine, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\UnityEngine.1.6.1.2\lib\UnityEngine.dll</HintPath>
-      <Private>True</Private>
+      <HintPath>..\packages\UnityEngine.1.9.0.5\lib\net35\UnityEngine.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -73,6 +69,7 @@
     <Compile Include="PositionService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SettingKeys.cs" />
+    <Compile Include="BirdcageLogger.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
