--- a/Birdcage/Birdcage.csproj
+++ b/Birdcage/Birdcage.csproj
@@ -21,7 +21,8 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <LangVersion>4</LangVersion>
+    <LangVersion>5</LangVersion>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -31,6 +32,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <LangVersion>4</LangVersion>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Assembly-CSharp, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
@@ -65,14 +67,18 @@
   <ItemGroup>
     <Compile Include="BirdcageUserMod.cs" />
     <Compile Include="ChirperUtils.cs" />
-    <Compile Include="FilterService.cs" />
-    <Compile Include="InputService.cs" />
+    <Compile Include="Services\FilterService.cs" />
+    <Compile Include="Services\InputService.cs" />
     <Compile Include="ModConfig.cs" />
     <Compile Include="OptionsPanelManager.cs" />
-    <Compile Include="PositionService.cs" />
+    <Compile Include="Services\PositionService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SettingKeys.cs" />
     <Compile Include="BirdcageLogger.cs" />
+    <Compile Include="Wrappers\ChirpPanelWrapper.cs" />
+    <Compile Include="Wrappers\IChirpPanelWrapper.cs" />
+    <Compile Include="Wrappers\IMessageManagerWrapper.cs" />
+    <Compile Include="Wrappers\MessageManagerWrapper.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
