--- a/Birdcage.UnitTests/packages.config
+++ b/Birdcage.UnitTests/packages.config
@@ -1,17 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Assembly-CSharp" version="1.9.0.5" targetFramework="net47" />
-  <package id="AutoFixture" version="3.51.0" targetFramework="net40" />
-  <package id="AutoFixture.AutoMoq" version="3.51.0" targetFramework="net40" />
+  <package id="Assembly-CSharp" version="1.10.0.3" targetFramework="net47" />
+  <package id="AutoFixture" version="4.4.0" targetFramework="net47" />
+  <package id="AutoFixture.AutoMoq" version="4.4.0" targetFramework="net47" />
   <package id="Castle.Core" version="4.2.1" targetFramework="net47" />
-  <package id="ColossalManaged" version="1.9.0.5" targetFramework="net47" />
-  <package id="FluentAssertions" version="4.19.4" targetFramework="net47" />
-  <package id="ICities" version="1.9.0.5" targetFramework="net47" />
-  <package id="Moq" version="4.7.145" targetFramework="net47" />
-  <package id="UnityEngine" version="1.9.0.5" targetFramework="net47" />
+  <package id="ColossalManaged" version="1.10.0.3" targetFramework="net47" />
+  <package id="Fare" version="2.1.1" targetFramework="net47" />
+  <package id="FluentAssertions" version="5.3.0" targetFramework="net47" />
+  <package id="ICities" version="1.10.0.3" targetFramework="net47" />
+  <package id="Moq" version="4.8.2" targetFramework="net47" />
+  <package id="System.Threading.Tasks.Extensions" version="4.4.0" targetFramework="net47" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net47" />
+  <package id="UnityEngine" version="1.10.0.3" targetFramework="net47" />
   <package id="xunit" version="2.3.1" targetFramework="net47" />
   <package id="xunit.abstractions" version="2.0.1" targetFramework="net47" />
-  <package id="xunit.analyzers" version="0.8.0" targetFramework="net47" />
+  <package id="xunit.analyzers" version="0.9.0" targetFramework="net47" />
   <package id="xunit.assert" version="2.3.1" targetFramework="net47" />
   <package id="xunit.core" version="2.3.1" targetFramework="net47" />
   <package id="xunit.extensibility.core" version="2.3.1" targetFramework="net47" />
