--- a/Birdcage.UnitTests/packages.config
+++ b/Birdcage.UnitTests/packages.config
@@ -9,8 +9,9 @@
   <package id="FluentAssertions" version="5.3.0" targetFramework="net47" />
   <package id="ICities" version="1.10.0.3" targetFramework="net47" />
   <package id="Moq" version="4.8.2" targetFramework="net47" />
-  <package id="System.Threading.Tasks.Extensions" version="4.4.0" targetFramework="net47" />
-  <package id="System.ValueTuple" version="4.4.0" targetFramework="net47" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0" targetFramework="net47" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.0" targetFramework="net47" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net47" />
   <package id="UnityEngine" version="1.10.0.3" targetFramework="net47" />
   <package id="xunit" version="2.3.1" targetFramework="net47" />
   <package id="xunit.abstractions" version="2.0.1" targetFramework="net47" />
