replace game nuget packages with direct game file references

--- a/Birdcage.UnitTests/Birdcage.UnitTests.csproj
+++ b/Birdcage.UnitTests/Birdcage.UnitTests.csproj
@@ -47,8 +47,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Assembly-CSharp, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\packages\Assembly-CSharp.1.13.1\lib\net35\Assembly-CSharp.dll</HintPath>
-      <Private>True</Private>
+      <HintPath>$(CS_GAME_DIRECTORY)\Cities_Data\Managed\Assembly-CSharp.dll</HintPath>
     </Reference>
     <Reference Include="AutoFixture, Version=4.15.0.0, Culture=neutral, PublicKeyToken=b24654c590009d4f">
       <HintPath>..\packages\AutoFixture.4.15.0\lib\net452\AutoFixture.dll</HintPath>
@@ -63,8 +62,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="ColossalManaged, Version=0.3.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\packages\ColossalManaged.1.13.1\lib\net35\ColossalManaged.dll</HintPath>
-      <Private>True</Private>
+      <HintPath>$(CS_GAME_DIRECTORY)\Cities_Data\Managed\ColossalManaged.dll</HintPath>
     </Reference>
     <Reference Include="Fare, Version=2.1.0.0, Culture=neutral, PublicKeyToken=ea68d375bf33a7c8">
       <HintPath>..\packages\Fare.2.1.2\lib\net35\Fare.dll</HintPath>
@@ -75,8 +73,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="ICities, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\packages\ICities.1.13.1\lib\net35\ICities.dll</HintPath>
-      <Private>True</Private>
+      <HintPath>$(CS_GAME_DIRECTORY)\Cities_Data\Managed\ICities.dll</HintPath>
     </Reference>
     <Reference Include="Moq, Version=4.16.0.0, Culture=neutral, PublicKeyToken=69f491c39445e920">
       <HintPath>..\packages\Moq.4.16.1\lib\net45\Moq.dll</HintPath>
@@ -103,8 +100,7 @@
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="UnityEngine, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\packages\UnityEngine.1.13.1\lib\net35\UnityEngine.dll</HintPath>
-      <Private>True</Private>
+      <HintPath>$(CS_GAME_DIRECTORY)\Cities_Data\Managed\UnityEngine.dll</HintPath>
     </Reference>
     <Reference Include="xunit.abstractions, Version=2.0.0.0, Culture=neutral, PublicKeyToken=8d05b1bb7a6fdb6c, processorArchitecture=MSIL">
       <HintPath>..\packages\xunit.abstractions.2.0.3\lib\net35\xunit.abstractions.dll</HintPath>
